fixing a layout problem in IE
git-svn-id: https://svn.midgard-project.org/midgard/trunk/midcom@14441 62f49d1c-1c16-0410-9156-d311ce72abac

--- a/midcom.helper.datamanager2/static/chooser/jquery.chooser_widget.css
+++ b/midcom.helper.datamanager2/static/chooser/jquery.chooser_widget.css
@@ -52,7 +52,6 @@ input.chooser_widget_search_input
     font: menu;
     font-size: 12px;
     overflow: hidden;
-    height: 22px;
     line-height: 22px;
 }
 .chooser_widget_results .chooser_widget_result_item div.chooser_widget_item_part
@@ -128,8 +127,7 @@ input.chooser_widget_search_input
 }
 
 /* Creation dialog related ends */
-
-#chooser_widget_item_part_status
+.chooser_widget_item_part_status
 {
     width: 20px;
     text-align: center;
@@ -142,15 +140,14 @@ input.chooser_widget_search_input
     background-color: #eeeeef !important;
     color: #000000 !important;
 }
-.chooser_widget_result_item_active #chooser_widget_item_part_status
+.chooser_widget_result_item_active .chooser_widget_item_part_status
 {
     background : url('../../stock-icons/16x16/approved.png') center center no-repeat;
 }
-
 .chooser_widget_result_item_inactive
 {
 }
-.chooser_widget_result_item_inactive #chooser_widget_item_part_status
+.chooser_widget_result_item_inactive .chooser_widget_item_part_status
 {
     background : none;
 }
@@ -161,7 +158,7 @@ input.chooser_widget_search_input
     /*  background-color: #c3c3c3;
     color: #000;*/
 }
-.chooser_widget_result_item_hover #chooser_widget_item_part_status
+.chooser_widget_result_item_hover .chooser_widget_item_part_status
 {
     background : url('../../stock-icons/16x16/approved_fade_50.png') center center no-repeat;
     background-color: Highlight;
@@ -172,7 +169,7 @@ input.chooser_widget_search_input
 /*  color: black;
     border: 1px solid red;*/
 }
-.chooser_widget_result_item_deleted #chooser_widget_item_part_status
+.chooser_widget_result_item_deleted .chooser_widget_item_part_status
 {
     background : url('../../stock-icons/16x16/cancel.png') center center no-repeat;
 }
